Fixed Carousel V1 Responsiveness on Mobile devices

--- a/client/src/components/Carousel/Carousel.css
+++ b/client/src/components/Carousel/Carousel.css
@@ -22,7 +22,7 @@
     padding: 1%;
     color: white;
     cursor: pointer;
-    z-index: 3;
+    z-index: 4;
     width: 50px;
     height: 50px;
     display: flex;
@@ -78,4 +78,31 @@
 }
 .filled{
     background: white;
+}
+
+@media screen and (max-width: 500px) {
+    .carousel{
+        width: 100%;
+        font-size: 20px;
+        height: 500px;
+    }
+    .carousel-slide{
+        width: 70%;
+    }
+    .prev-slide{
+        transform: translateX(-50%) scale(0.8);
+        z-index: 0;
+        opacity: 0;
+    }
+    .next-slide{
+        transform: translateX(50%) scale(0.8);
+        z-index: 0;
+        opacity: 0;
+    }
+    /* .arrow-next{
+        right: 5px;
+    }
+    .arrow-prev{
+        left: 5px;
+    } */
 }
