--- a/client/src/components/ProductCard/ProductCard.css
+++ b/client/src/components/ProductCard/ProductCard.css
@@ -29,9 +29,8 @@
 
 @media screen and (max-width: 500px) {
     .card{
-        width: 200%;
-        height: 400px;
-        margin: 25px -50%;
+        width: 100%;
+        height: 100%;
     }
     .card img{
         max-height: 55%;
